[package]
name = "eval-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = { version = "0.17.0" }
shuttle-runtime = { version = "0.17.0" }
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
    "utils",
] }
shuttle-secrets = "0.17.0"
tokio = { version = "1.26.0" }
tracing = "0.1.37"

[dev-dependencies]
pretty_assertions = "1.3.0"
