[package]
name = "eval-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bson = "2.6.1"
futures = "0.3.28"
mongodb = "2.5.0"
tokio = { version = "1.26.0" }
tracing = "0.1.37"
serde = "1.0.163"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
    "utils",
    "framework",
    "standard_framework",
] }
shuttle-runtime = { version = "0.17.0" }
shuttle-secrets = "0.17.0"
shuttle-shared-db = { version = "0.17.0", features = ["mongodb"] }
shuttle-serenity = { version = "0.17.0" }

[dev-dependencies]
pretty_assertions = "1.3.0"

[env]
RUST_LOG = "eval_bot=debug,serenity=warn"
