[package]
name = "eval-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bson = "2.6.1"
futures = "0.3.28"
mongodb = "2.5.0"
poise = "0.5.5"
tokio = { version = "1.26.0" }
tracing = "0.1.37"
serde = "1.0.163"
shuttle-poise = "0.17.0"
shuttle-runtime = { version = "0.17.0" }
shuttle-secrets = "0.17.0"
shuttle-shared-db = { version = "0.17.0", features = ["mongodb"] }
pest = "2.6.0"
pest_derive = "2.6.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
